--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
         <section>
             <div class="container bg-light" id="contact">
                 <div class="row my-5 py-5">
-                    <h3>Un projet Web ?</h3>
-                    <h4>Venez en discuter autour d'un café</h4>
+                    <h3>Un projet ?</h3>
+                    <h4>Venez en discuter autour d'un café.</h4>
                     <div class="col my-4">
                         <img src="images/coffer.png" alt="café" class="w-100">
                     </div>
@@ -452,33 +452,10 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tellus leo, volutpat vitae
-                            mi
-                            ultrices,
-                            sollicitudin
-                            blandit dui. Mauris ultricies iaculis leo id consequat. Class aptent taciti sociosqu ad
-                            litora
-                            torquent
-                            per conubia
-                            nostra, per inceptos himenaeos. Sed posuere risus viverra ornare porttitor. Nullam egestas
-                            nec
-                            libero eget
-                            sagittis.
-                            Phasellus vulputate ante a vulputate vehicula. Suspendisse nec dolor ante.
+                            Le site a été fait par Evan Tournant tout droits réservés.
                         </p>
                         <p>
-                            Nunc auctor semper turpis. Duis quam velit, aliquam ut mi vel, sollicitudin dapibus erat.
-                            Etiam
-                            vitae
-                            malesuada urna.
-                            Vestibulum scelerisque lacus at molestie cursus. Donec placerat enim id enim feugiat
-                            gravida.
-                            Integer ut
-                            maximus libero.
-                            Nulla faucibus dolor vitae varius rutrum. Nunc neque sem, convallis id lorem quis, vulputate
-                            imperdiet
-                            eros. Donec
-                            viverra commodo congue.
+                            Ce site ne récupère pas vos informations personnelles.
                         </p>
                     </div>
                 </div>
